--- a/templates/slideshow.html
+++ b/templates/slideshow.html
@@ -95,28 +95,8 @@
             </div>
             <a class="button secondary play">Play</a>
             <a class="button secondary stop">Stop</a>
-            <h3 id="overview">Overview</h3>
-            <p>Autoplay plugin has three options:</p>
-            <pre><code>//default settings:
-autoplay:false
-autoplayTimeout:5000
-autoplayHoverPause:false</code></pre>
-            <p>In this example i&#39;ve added two buttons with custom events for play and stop:</p>
-            <pre><code>var owl = $(&#39;.owl-carousel&#39;);
-owl.owlCarousel({
-    items:4,
-    loop:true,
-    margin:10,
-    autoplay:true,
-    autoplayTimeout:1000,
-    autoplayHoverPause:true
-});
-$(&#39;.play&#39;).on(&#39;click&#39;,function(){
-    owl.trigger(&#39;play.owl.autoplay&#39;,[1000])
-})
-$(&#39;.stop&#39;).on(&#39;click&#39;,function(){
-    owl.trigger(&#39;stop.owl.autoplay&#39;)
-})</code></pre>
+
+</code></pre>
             <script>
                 $(document).ready(function () {
                     var owl = $('.owl-carousel');
@@ -145,10 +125,10 @@ $(&#39;.stop&#39;).on(&#39;click&#39;,function(){
     <div class="row">
         <div class="large-12 columns">
             <h5>
-                <a href="{% static '/OwlCarousel2/docs/support-contact.html">David Deutsch' %}</a>
-            <a id=" custom-tweet-button"
+                <a href="{% static '/OwlCarousel2/docs/support-contact.html">David Deutsch' %}"></a>
+            <a id="custom-tweet-button"
                 href="https://twitter.com/share?url=https://github.com/OwlCarousel2/OwlCarousel2&text=Owl Carousel -
-                This is so awesome! " target="_blank"></a>
+                This is so awesome! " target="_blank"></a>Reza Mahmoudain
             </h5>
         </div>
     </div>
