add some styles

--- a/templates/slideshow.html
+++ b/templates/slideshow.html
@@ -90,6 +90,7 @@
                 {% for article in object_list %}
                     <div class="item">
                         {{ article.image_post }}
+                        <p>{{ article.title }}</p>
                     </div>
                 {% endfor %}
             </div>
