--- a/templates/slideshow.html
+++ b/templates/slideshow.html
@@ -1,93 +1,10 @@
-{% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
 
-    <!-- head -->
-    <meta charset="utf-8">
-    <meta name="msapplication-tap-highlight" content="no"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="Autoplay usage demo">
-    <meta name="author" content="David Deutsch">
-    <title>
-        Autoplay Demo | Owl Carousel | 2.3.4
-    </title>
-
-    <!-- Stylesheets -->
-    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,400italic,300italic' rel='stylesheet'
-          type='text/css'>
-    <link rel="stylesheet" href="{% static '/assets/css/docs.theme.min.css' %}">
-
-    <!-- Owl Stylesheets -->
-    <link rel="stylesheet" href="{% static '/assets/owlcarousel/assets/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static '/assets/owlcarousel/assets/owl.theme.default.min.css' %}">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Favicons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144"
-          href="{% static 'assets/ico/apple-touch-icon-144-precomposed.png' %}">
-    <link rel="shortcut icon" href="{% static '/assets/ico/favicon.png' %}">
-    <link rel="shortcut icon" href="favicon.ico">
-
-    <!-- Yeah i know js should not be in header. Its required for demos.-->
-
-    <!-- javascript -->
-    <script src="{% static '/assets/vendors/jquery.min.js' %}"></script>
-    <script src="{% static '/assets/owlcarousel/owl.carousel.js' %}"></script>
-</head>
-<body>
-
-<!-- header -->
-<header class="header">
-    <div class="row">
-        <div class="large-12 columns">
-            <div class="brand left">
-                <h3>
-                    <a href="{% static '/OwlCarousel2/">owl.carousel.js' %}"></a>
-                </h3>
-            </div>
-            <a id="toggle-nav" class="right">
-                <span></span> <span></span> <span></span>
-            </a>
-            <div class="nav-bar">
-                <ul class="clearfix">
-                    <li><a href="{% static '/OwlCarousel2/index.html' %}">Home</a></li>
-                    <li class="active">
-                        <a href="{% static '/OwlCarousel2/demos/demos.html' %}">Demos</a>
-                    </li>
-                    <li><a href="{% static '/OwlCarousel2/docs/started-welcome.html' %}">Docs</a></li>
-                    <li>
-                        <a href="https://github.com/OwlCarousel2/OwlCarousel2/archive/2.3.4.zip">Download</a>
-                        <span class="download"></span>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</header>
-
-<!-- title -->
-<section class="title">
-    <div class="row">
-        <div class="large-12 columns">
-            <h1>Autoplay</h1>
-        </div>
-    </div>
-</section>
-
-<!--  Demos -->
 <section id="demos">
     <div class="row">
         <div class="large-12 columns">
             <div class="owl-carousel owl-theme">
-                {% for article in object_list %}
+                {% for article in articles %}
                     <div class="item">
                         {{ article.image_post }}
                         <p>{{ article.title }}</p>
@@ -120,23 +37,3 @@
         </div>
     </div>
 </section>
-
-<!-- footer -->
-<footer class="footer">
-    <div class="row">
-        <div class="large-12 columns">
-            <h5>
-                <a href="{% static '/OwlCarousel2/docs/support-contact.html">David Deutsch' %}"></a>
-            <a id="custom-tweet-button"
-                href="https://twitter.com/share?url=https://github.com/OwlCarousel2/OwlCarousel2&text=Owl Carousel -
-                This is so awesome! " target="_blank"></a>Reza Mahmoudain
-            </h5>
-        </div>
-    </div>
-</footer>
-
-<!-- vendors -->
-<script src="{% static '/assets/vendors/highlight.js' %}"></script>
-<script src="{% static '/assets/js/app.js' %}"></script>
-</body>
-</html>
