fix a buug in tmptags

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load slideshow %}
+{% load i18n %}
 
 
 <!DOCTYPE html>
@@ -13,7 +14,7 @@
     <meta name="description" content="Autoplay usage demo">
     <meta name="author" content="David Deutsch">
     <title>
-        Autoplay Demo | Owl Carousel | 2.3.4
+        SlideShow | Owl Carousel | 2.3.4
     </title>
 
     <!-- Stylesheets -->
@@ -60,13 +61,13 @@
             </a>
             <div class="nav-bar">
                 <ul class="clearfix">
-                    <li><a href="{% static '/OwlCarousel2/index.html' %}">Home</a></li>
+                    <li><a href="{% static '/OwlCarousel2/index.html' %}">{% translate "Home" %}</a></li>
                     <li class="active">
-                        <a href="{% static '/OwlCarousel2/demos/demos.html' %}">Demos</a>
+                        <a href="{% static '/OwlCarousel2/demos/demos.html' %}">{% translate "Demos" %}</a>
                     </li>
-                    <li><a href="{% static '/OwlCarousel2/docs/started-welcome.html' %}">Docs</a></li>
+                    <li><a href="{% static '/OwlCarousel2/docs/started-welcome.html' %}">{% translate "Docs" %}</a></li>
                     <li>
-                        <a href="https://github.com/OwlCarousel2/OwlCarousel2/archive/2.3.4.zip">Download</a>
+                        <a href="https://github.com/OwlCarousel2/OwlCarousel2/archive/2.3.4.zip">{% translate "Download" %}</a>
                         <span class="download"></span>
                     </li>
                 </ul>
@@ -79,7 +80,7 @@
 <section class="title">
     <div class="row">
         <div class="large-12 columns">
-            <h1>Autoplay</h1>
+            <h1>{% translate "Autoplay" %}</h1>
         </div>
     </div>
 </section>
@@ -87,6 +88,37 @@
 <!--  Demos -->
 
 {% slideshow_tmptag %}
+
+<section id="demos">
+    <div class="row">
+        <div class="large-12 columns">
+            <div class="owl-carousel owl-theme">
+
+            </div>
+            <a class="button secondary play">Play</a>
+            <a class="button secondary stop">Stop</a>
+            <script>
+                $(document).ready(function () {
+                    var owl = $('.owl-carousel');
+                    owl.owlCarousel({
+                        items: 4,
+                        loop: true,
+                        margin: 10,
+                        autoplay: true,
+                        autoplayTimeout: 1000,
+                        autoplayHoverPause: true
+                    });
+                    $('.play').on('click', function () {
+                        owl.trigger('play.owl.autoplay', [1000])
+                    })
+                    $('.stop').on('click', function () {
+                        owl.trigger('stop.owl.autoplay')
+                    })
+                })
+            </script>
+        </div>
+    </div>
+</section>
 
 <!-- footer -->
 <footer class="footer">
@@ -96,7 +128,7 @@
                 <a href="{% static '/OwlCarousel2/docs/support-contact.html">David Deutsch' %}"></a>
             <a id="custom-tweet-button"
                 href="https://twitter.com/share?url=https://github.com/OwlCarousel2/OwlCarousel2&text=Owl Carousel -
-                This is so awesome! " target="_blank"></a>Reza Mahmoudain
+                This is so awesome! " target="_blank"></a>{% translate "Reza Mahmoudain" %}
             </h5>
         </div>
     </div>
