create locale file in SlideShow app+ compile messages but it dosent work

--- a/SlideShow/templates/slideshow.html
+++ b/SlideShow/templates/slideshow.html
@@ -1,4 +1,4 @@
-
+{% load i18n %}
 
 <section id="demos">
     <div class="row">
@@ -10,8 +10,8 @@
                     </div>
                 {% endfor %}
             </div>
-            <a class="button secondary play">Play</a>
-            <a class="button secondary stop">Stop</a>
+            <a class="button secondary play">{% translate "play" %}</a>
+            <a class="button secondary stop">{% translate "Stop" %}</a>
 
 </code></pre>
             <script>
