add title below images

--- a/SlideShow/templates/slideshow.html
+++ b/SlideShow/templates/slideshow.html
@@ -7,7 +7,9 @@
                 {% for article in articles %}
                     <div class="item">
                         {{ article.image_post }}
+                    <p> {{ article.title }}</p>
                     </div>
+
                 {% endfor %}
             </div>
             <a class="button secondary play">{% translate "play" %}</a>
