add language to urls with i18n_patterns

--- a/SlideShow/templates/home.html
+++ b/SlideShow/templates/home.html
@@ -58,7 +58,7 @@
             <div class="brand left">
                 <h3>
                     <div class="language">
-                        <a href="{% url 'home' %}?lang=eun">
+                        <a href="{% url 'home' %}?lang=en">
                         {% translate "EN" %}</a>
                         / <a href="{% url 'home' %}?lang=fa">
                         {% translate "FA" %}</a>
